--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
 <head>
-<title> Intellipaat </title>
+<title> DevOps Project 1 </title>
 </head>
 <body style = "background-image:url('images/github3.jpg'); background-size: 100%">
 <h2 ALIGN=CENTER>Hello world. Marck has completed the Project.!</h2>
 </body>
 </html>
+
 
